# swhr

./: Cargo.toml  README.md  flake.nix  swhr.example.yaml  swhr.yaml
.github/actions/rust-build-target/: action.yml
.github/workflows/: cd.yml  ci.yml
src/: main.rs  server.rs  service.rs
